# chatbar

./: .gitignore  README.md  manifest.json  page.html  style.css
chat-server/: app.py  chat.py  gen_summary.py  reader.py  sample.html  temp.html
chat-server/research/: imagesummarizer.ipynb  loader.ipynb  loader.py  sample.html
chatbar/: manifest.json  sidepanel-global.html
chatbar/scripts/: background.js
extension/: manifest.json  sidepanel-global.html
extension/css/: style.css
extension/scripts/: background.js  get_html.js  myScript.js  sidepanel.js  tesseract.min.js
scripts/: myScript.js
server/: pyproject.toml
