[tool.poetry]
name = "chat-server"
version = "0.1.0"
description = ""
authors = ["Vikram Ardham <vikram.ardham@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
requests = "^2.31.0"
fastapi = "^0.110.0"
ollama = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
